<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/main"
    android:gravity="center">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_end"
        android:textSize="30sp"
        android:layout_marginBottom="50dp"
        ></TextView>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/button_change_level"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/change_level"
        android:padding="10dp"
        android:textSize="20dp"
        android:background="@drawable/button_type1"/>
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/button_next_level"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/next_level"
        android:padding="10dp"
        android:textSize="20dp"
        android:background="@drawable/button_type1"/>

</LinearLayout>
