<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Levels_list"
    android:background="@drawable/main"
    android:orientation="vertical">
    <Button
        android:background="@drawable/button_type1"
        android:id="@+id/buttonback"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/back" />

    <ScrollView
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button1"
                    android:text="@string/level_1"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button2"
                    android:text="@string/level_2"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button3"
                    android:text="@string/level_3"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button4"
                    android:text="@string/level_4"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button5"
                    android:text="@string/level_5"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button6"
                    android:text="@string/level_6"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_6"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button7"
                    android:text="@string/level_7"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_7"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button8"
                    android:text="@string/level_8"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_8"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button9"
                    android:text="@string/level_9"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_9"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button10"
                    android:text="@string/level_10"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_10"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button11"
                    android:text="@string/level_11"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_11"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button12"
                    android:text="@string/level_12"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_12"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button13"
                    android:text="@string/level_13"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_13"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button14"
                    android:text="@string/level_14"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_14"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/button15"
                    android:text="@string/level_15"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/button_type1"></Button>
                <ImageView
                    android:id="@+id/image_15"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_idle_lock" ></ImageView>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>